# gutil

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  format.sh  gutil_deps.bzl
bazel/patches/: boost-001-temp_fix_for_build_failure.patch
gutil/: BUILD.bazel  collections.h  collections_test.cc  diff_test.bzl  io.cc  io.h  ordered_map.h  overload.h  proto.cc  proto.h  proto_matchers.h  proto_matchers_test.cc  proto_ordering.cc  proto_ordering.h  proto_string_error_collector.h  status.h  status_matchers.h  syslog_sink.cc  syslog_sink.h  test_artifact_writer.cc  test_artifact_writer.h  test_artifact_writer_test.cc  testing.h  timer.h  version.cc  version.h  version_test.cc
gutil/embed_data/: BUILD.bazel  build_defs.bzl
