# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# https://bazel.build/external/overview#bzlmod

module(
    name = "gutil",
    version = "head",
    bazel_compatibility = [">=7.4.1"],
    compatibility_level = 1,
    repo_name = "com_github_google_gutil",
)

bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "googleapis", version = "0.0.0-20250604-de157ca3", repo_name = "com_google_googleapis")
bazel_dep(name = "googleapis-cc", version = "1.0.0")
bazel_dep(name = "googleapis-grpc-cc", version = "1.0.0")
bazel_dep(
    name = "abseil-cpp",
    version = "20250814.0",
    repo_name = "com_google_absl",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.3",
    dev_dependency = True,
    repo_name = "com_github_buildifier_prebuilt",
)

# Note: Googletest is NOT a dev_dependency. Some Gutil test utilities
# intended to be used by Gutil users depend on GoogleTest.
bazel_dep(
    name = "googletest",
    version = "1.15.2",
    repo_name = "com_google_googletest",
)

bazel_dep(
    name = "google_benchmark",
    version = "1.8.5",
    dev_dependency = True,
    repo_name = "com_google_benchmark",
)

bazel_dep(
    name = "grpc",
    # When updating version check `multiple_version_override` below.
    version = "1.66.0.bcr.2",
    repo_name = "com_github_grpc_grpc",
)

multiple_version_override(
    module_name = "googleapis",
    versions = [
        # This version used by the gutil.
        "0.0.0-20250604-de157ca3",
        # This version used by grpc which uses deprecated `switched_rules`
        # extension. It can be removed once grpc migrated to newer version
        # of googleapis. At this point the `multiple_version_override`
        # should be removed as well.
        "0.0.0-20240819-fe8ba054a",
    ],
)

bazel_dep(
    name = "protobuf",
    version = "25.6",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "re2",
    version = "2024-07-02.bcr.1",
    repo_name = "com_googlesource_code_re2",
)
